day4 validate update actor